# Task_2_CV

./: README.md
Backend/: CMakeLists.txt  adding_noise.cpp  edge_detection.cpp  enhance_image.cpp  filter_noise.cpp  frequency_filters.cpp  generate_hybrid.cpp  get_intensity_data.cpp  intensity_data_info.h  main_binding.cpp  task2_shapes.cpp
Backend/.cache/clangd/index/: adding_noise.cpp.2734048E96749E5A.idx  adding_noise.cpp.E2574A9158ACAFE4.idx  binding_utils.h.4B05738080AC3115.idx  binding_utils.h.B36E884F1D4233A2.idx  edge_detection.cpp.62D07DF1D585AAAF.idx  edge_detection.cpp.849AC774A3D08ADB.idx  enhance_image.cpp.738E15F4FD362A40.idx  enhance_image.cpp.9C8C73EDAD401239.idx  filter_noise.cpp.9AF04258C34C98C7.idx  filter_noise.cpp.F08D566052F48D91.idx  frequency_filters.cpp.3C78EF88E177BD71.idx  frequency_filters.cpp.FF1F6EC2FEBAF86B.idx  generate_hybrid.cpp.342BCF253E419935.idx  generate_hybrid.cpp.BC3CB49EE3F585F0.idx  get_intensity_data.cpp.5050175C84801582.idx  get_intensity_data.cpp.75D667A417E96F03.idx  intensity_data_info.h.6A6300D3DEA50E93.idx  intensity_data_info.h.CDB5228BAB60685C.idx  main_binding.cpp.719D6366C5614D7B.idx  main_binding.cpp.FDD02F545713FE72.idx  task2_shapes.cpp.771CEC1E1A9B16E9.idx  task2_shapes.cpp.797AD2A83D63A20A.idx
Backend/cpp_pyqt_example/: CMakeLists.txt  backend.cpp  main.py
Frontend/: front.py
